--- a/libs/ui/src/lib/patient/patient-details/patient-details.component.html
+++ b/libs/ui/src/lib/patient/patient-details/patient-details.component.html
@@ -1,1 +1,60 @@
-<p>patient-details works!</p>
+<mat-card>
+    <div class="form-container">
+        <h3 id="PersonalDetailsHeader">{{personalDetailsHeading}}</h3>
+        <form [formGroup] = 'personalDetails' class="form-group">
+            <mat-form-field class="form-field" appearance="outline">
+                <mat-label> First Name
+                </mat-label>
+                <input matInput formControlName="firstName" required /> 
+                <mat-error *ngIf="personalDetails.controls.firstName.touched && personalDetails.controls.firstName.invalid">
+                  <span *ngIf="personalDetails.controls.firstName.errors.required">This field is required.</span>
+                </mat-error>
+            </mat-form-field>
+    
+            <mat-form-field class="form-field" appearance="outline">
+                <mat-label> Last name
+                </mat-label>
+                <input matInput formControlName="lastName" required />
+                <mat-error *ngIf="personalDetails.controls.lastName.touched && personalDetails.controls.lastName.invalid">
+                  <span *ngIf="personalDetails.controls.lastName.errors.required">This field is mandatory.</span>
+                </mat-error>
+              </mat-form-field>
+            
+    
+              <mat-form-field class="form-field" appearance="outline">
+                <mat-label> ID Number
+                </mat-label>
+                <input matInput formControlName="IdNumber" required />
+                <mat-error *ngIf="personalDetails.controls.IdNumber.touched && personalDetails.controls.IdNumber.invalid">
+                  <span *ngIf="personalDetails.controls.IdNumber.errors.required">This field is mandatory.</span>
+                </mat-error>
+              </mat-form-field>
+    
+              <mat-form-field class="form-field" appearance="outline">
+                <mat-label> Contact number
+                </mat-label>
+                <input matInput formControlName="contactNum" required />
+                <mat-error *ngIf="personalDetails.controls.contactNum.touched && personalDetails.controls.contactNum.invalid">
+                  <span *ngIf="personalDetails.controls.contactNum.errors.required">This field is mandatory.</span>
+                </mat-error>
+              </mat-form-field>
+    
+              <mat-form-field class="form-field" appearance="outline">
+                <mat-label> E-mail
+                </mat-label>
+                <input matInput formControlName="email" required />
+                <mat-error *ngIf="personalDetails.controls.email.touched && personalDetails.controls.email.invalid">
+                  <span *ngIf="personalDetails.controls.email.errors.required">This field is mandatory.</span>
+                </mat-error>
+              </mat-form-field>
+    
+              <div class="radio-container">
+                  <label id="genderRadioLabel">Gender</label><br>
+                <mat-radio-group formControlName="gender" aria-labelledby="genderRadioLabel">
+                    <mat-radio-button value="male">Male</mat-radio-button>
+                    <mat-radio-button value="female">Female</mat-radio-button>
+                </mat-radio-group>
+              </div>
+        </form>
+    </div>
+</mat-card>
